[04/03/2026 13:14] Finalizacion del proyecto implementando try-with-resoirces | SHA256(por motivos de tiempo no pude implementar otro mas seguro)